# swift

./: BUILD-CYGWIN-64.md  BUILD-MINGW.md  CMakeLists.txt  Swift Windows Compile Steps.txt
cmake/modules/: AddSwift.cmake  FindICU.cmake  SwiftConfigureSDK.cmake  SwiftSharedCMakeConfig.cmake  SwiftSource.cmake
lib/AST/: ASTContext.cpp  ASTDumper.cpp  ASTMangler.cpp  ASTPrinter.cpp  ASTScopeCreation.cpp  ASTVerifier.cpp  ASTWalker.cpp  AccessRequests.cpp  Decl.cpp  DeclContext.cpp  DiagnosticEngine.cpp  GenericSignature.cpp
lib/Basic/: CMakeLists.txt  JSONSerialization.cpp  LangOptions.cpp  TaskQueue.cpp  UUID.cpp
lib/ClangImporter/: ClangAdapter.cpp  ClangImporter.cpp  ImportDecl.cpp  ImportName.cpp  ImportType.cpp  SwiftLookupTable.h
lib/Demangling/: Demangler.cpp  NodePrinter.cpp  OldRemangler.cpp  Remangler.cpp
lib/Driver/: Compilation.cpp  Driver.cpp  ToolChains.cpp  ToolChains.h
lib/Frontend/: CompilerInvocation.cpp
lib/FrontendTool/: FrontendTool.cpp  ReferenceDependencies.cpp  TBD.cpp
lib/IDE/: CodeCompletion.cpp  ExprContextAnalysis.cpp  Refactoring.cpp
lib/IRGen/: CMakeLists.txt  GenCast.cpp  GenClangType.cpp  GenClass.cpp  GenDecl.cpp  GenFunc.cpp  GenHeap.cpp  GenMeta.cpp  GenObjC.cpp  IRGen.cpp  IRGenDebugInfo.cpp  IRGenModule.cpp  IRGenModule.h  Linking.cpp
lib/Immediate/: CMakeLists.txt  Immediate.cpp
lib/Index/: IndexSymbol.cpp
lib/Markup/: Markup.cpp
lib/Migrator/: CMakeLists.txt
lib/Option/: SanitizerOptions.cpp
lib/RemoteAST/: InProcessMemoryReader.cpp
lib/SIL/: AbstractionPattern.cpp  SILDeclRef.cpp  SILFunctionType.cpp  SILPrinter.cpp
lib/SILGen/: SILGen.h
lib/Sema/: LookupVisibleDecls.cpp  TypeCheckAccess.cpp  TypeCheckConstraints.cpp  TypeCheckDecl.cpp
lib/Serialization/: Serialization.cpp
lib/TBDGen/: TBDGen.cpp
misc/fake/: clang++.c  gcc.bat  swiftc.c
stdlib/: CMakeLists.txt
stdlib/public/: CMakeLists.txt
test/: CMakeLists.txt  lit.cfg
test/1_stdlib/: SpriteKit.swift
test/ClangImporter/: cxx_interop.swift  cxx_interop_ir.swift  cxx_ir.swift  cxx_parse.swift
test/Driver/: linker-autolink-extract.swift  linker.swift  (+3 more)
unittests/Basic/: CMakeLists.txt
utils/: build-script-impl  gyb.py
(+118 files in other folders)
